# proton

./: .gitignore  OPENSOURCE_ASSESSMENT.md  UNIFIED_ARCHITECTURE_DESIGN.md  azure-pipelines.yml  docker-bake-ctx.hcl  docker-bake-pkg.hcl  docker-bake.hcl  project-words.txt
deploy-service/src/deploy-service/: .dockerignore  .editorconfig  .gitignore  README.md  main.py  pyproject.toml
deploy-service/src/deploy-service/docs/: openapi.yaml
deploy-service/src/deploy-service/scripts/: build.sh  chart.sh  dev-build.sh  manifest.sh
deploy-service/src/deploy-service/src/clients/: cmd.py  cms.py  config.py  helm.py  hydra.py  k8s.py  opa.py  oss.py  protoncli.py
deploy-service/src/deploy-service/src/common/: __init__.py  config.py  error.py  global_param.py  ignore_case_configparser.py  lib.py  log_util.py  node_utils.py  utils.py  wrapper.py
deploy-service/src/deploy-service/src/handlers/: access_addr_handler.py  client_package_handler.py  communication_handler.py  containerized_service_manager_handler.py  health_handler.py  oss_handler.py  ssl_handler.py  timestamp_handler.py
deploy-service/src/deploy-service/src/lib/: __init__.py
deploy-service/src/deploy-service/src/modules/: client_package_manager.py  communication_manager.py  obs_instances_manager.py  ossgateway_service_manager.py  ssl_manager.py
deploy-service/src/deploy-service/src/run/: __init__.py  cms.py  helm.py  server.py
deploy-service/src/deploy-service/src/urls/: __init__.py  client.py  communication.py  container.py  health.py
deploy-service/src/deploy-service/test/: ut_utils.py
(+1772 files in other folders)
